add method=post, settings.py

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,6 +5,12 @@
     <title>About</title>
 </head>
 <body>
-<h2>Шаблон информационной страницы</h2>
+    <ul>
+        <li><a href="http://127.0.0.1:8000/">главная</a></li>
+        <li><a href="http://127.0.0.1:8000/about/">о нас</a></li>
+        <li><a href="http://127.0.0.1:8000/contact/">контакты</a></li>
+    </ul>
+    <hr>
+    <h2 align="center">Шаблон информационной страницы</h2>
 </body>
 </html>
