--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,13 @@
     <title>Home</title>
 </head>
 <body>
-    <h2>test</h2>
+    <ul>
+        <li><a href="http://127.0.0.1:8000/">главная</a></li>
+        <li><a href="http://127.0.0.1:8000/about/">о нас</a></li>
+        <li><a href="http://127.0.0.1:8000/contact/">контакты</a></li>
+    </ul>
+    <hr>
+    <h2 align="center">Главная страница</h2>
     <h3>secret: {{secret}}</h3>
 </body>
 </html>
