--- a/templates/about.html
+++ b/templates/about.html
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>About</title>
-</head>
-<body>
-    <ul>
-        <li><a href="http://127.0.0.1:8000/">главная</a></li>
-        <li><a href="http://127.0.0.1:8000/about/">о нас</a></li>
-        <li><a href="http://127.0.0.1:8000/contact/">контакты</a></li>
-    </ul>
+{% extends "base.html" %}
+{% block index %}
     <hr>
     <h2 align="center">Шаблон информационной страницы</h2>
-</body>
-</html>
+{% endblock %}
