--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,11 +1,14 @@
 {% extends "base.html" %}
-{% block index %}
-    <hr>
-    <h1 align="center">Отправить нам сообщение</h1>
-    <form method="post" align="center">
-        <input type="email" name="email" placeholder="email"><br>
-        <input type="text" name="title" placeholder="Заголовок"><br>
-        <input type="text" name="text" placeholder="Текст сообщения"><br>
-		<button type="submit">Отправить</button>
-    </form>
+{% block form %}
+    <form  action="" method="post">
+        <h3>Форма для заполнения данных:</h3>
+        <label>
+            <input type="text" name="firstname" placeholder="firstname">
+            <input type="text" name="lastname" placeholder="lastname">
+            <input type="tel" name="tel" placeholder="tel: +7(000)000-0000">
+            <input type="email" name="e-mail" placeholder="e-mail">
+            <textarea type="text" name="text" rows="10" ></textarea>
+        </label>
+        <input id="submit" type="submit">
+     </form>
 {% endblock %}
