add styles in contact.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="/static/styles.css" rel="stylesheet">
-<!--    <style type="text/static">{% block form_style %}{% endblock %}</style>-->
+<!--    <link href="/static/styles.css" rel="stylesheet">-->
+    <style type="text/static">{% block form_style %}{% endblock %}</style>
     <title>Site Name</title>
 </head>
 <body>
