--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,17 @@
 {% extends "base.html" %}
+{% block form_style %}
+        form{margin:0 auto;
+            width:300px
+            ;height:400px;
+            display:flex;
+            flex-direction:column;
+            justify-content:space-between}
+        form textarea{
+            resize:none}
+        form .redoutline{
+        outline:1px solid red}
+{% endblock %}
+
 {% block form %}
     <form  action="" method="post">
         <h3>Форма для заполнения данных:</h3>
