--- a/templates/base.html
+++ b/templates/base.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-<!--    <link href="/static/styles.css" rel="stylesheet">-->
-    <style type="text/static">{% block form_style %}{% endblock %}</style>
-    <title>Site Name</title>
+    <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-    <div class="header">
-        <h1>Название сайта</h1>
-        {% include './includes/main_menu.html' %}
-        <hr>
-    </div>
-    <div>
-    {% block index %}
+<div class="header">
+    <h1>Название сайта</h1>
+    {% include './includes/main_menu.html' %}
+    <hr>
+</div>
+<div>
+    {% block body %}
     {% endblock %}
-
-    {% block form %}
-    {% endblock %}
-    </div>
-    <div>
-        <hr>
-        <h2>footer</h2>
-    </div>
+</div>
+<div>
+    <hr>
+    <h2>footer</h2>
+</div>
 </body>
 </html>
