updated the project structure, removed unnecessary files

--- a/templates/base_example.html
+++ b/templates/base_example.html
@@ -8,7 +8,7 @@
 <body>
 <div class="header">
     <h1>Название сайта</h1>
-    {% include './includes/main_menu.html' %}
+    {% include './includes/main_menu_example.html' %}
     <hr>
 </div>
 <div>
