--- a/templates/page_example.html
+++ b/templates/page_example.html
@@ -1,7 +1,7 @@
-{% extends "base.html" %}
+{% extends "base_example.html" %}
 
 {% block title %}
-Создание курса
+Название страницы
 {% endblock %}
 
 {% block body %}
